fixed rating alignment

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ img {
 	margin-bottom: 15px;
 }
 
-p {
+#hp {
 	text-align: center;
 }
 
